Fix #outer-wrapper content being cut off

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -112,6 +112,7 @@ body {
 	justify-content: center;
 	align-items: center;
 	width: 100dvw;
+	height: 100dvh;
 	overflow-x: hidden;
 }
 
@@ -301,7 +302,6 @@ header {
 	background: none;
 	padding: 0.5rem 0;
 	width: 100%;
-	transition: all 1s; 
 }
 
 .navbar-links a {
